First draft of Shark running on SparkSQL.