@@ -25,19 +25,16 @@ import net.virtualvoid.sbt.graph.{Plugin => DependencyGraphPlugin}
 import sbtassembly.Plugin._
 import sbtassembly.Plugin.AssemblyKeys._
 
-
 object SharkBuild extends Build {
 
   // Shark version
-  val SHARK_VERSION = "0.9.1-SNAPSHOT"
+  val SHARK_VERSION = "1.0.0-PREVIEW-SNAPSHOT"
 
   val SHARK_ORGANIZATION = "edu.berkeley.cs.shark"
 
-  val HIVE_VERSION = "0.11.0-shark-0.9.1-SNAPSHOT"
-
   val SPARK_VERSION = "1.0.0-SNAPSHOT"
 
-  val SCALA_VERSION = "2.10.3"
+  val SCALA_VERSION = "2.10.4"
 
   val SCALAC_JVM_VERSION = "jvm-1.6"
   val JAVAC_JVM_VERSION = "1.6"
@@ -74,36 +71,17 @@ object SharkBuild extends Build {
   // Exclusion rules for Hive artifacts
   val excludeGuava = ExclusionRule(organization = "com.google.guava")
   val excludeLog4j = ExclusionRule(organization = "log4j")
-  val excludeServlet = ExclusionRule(organization = "javax.servlet")
+  val excludeServlet = ExclusionRule(organization = "org.mortbay.jetty")
   val excludeXerces = ExclusionRule(organization = "xerces")
+  val excludeHive = ExclusionRule(organization = "org.apache.hive")
 
-  // TODO(harvey): These should really be in a SharkHive project, but that requires re-organizing
-  //               all of our settings. Should be done for v0.9.1. Also, we might not need some
-  //               of these jars.
-  val hiveArtifacts = Seq(
-    "hive-anttasks",
-    "hive-beeline",
-    "hive-cli",
-    "hive-common",
-    "hive-exec",
-    "hive-hbase-handler",
-    "hive-hwi",
-    "hive-jdbc",
-    "hive-metastore",
-    "hive-serde",
-    "hive-service",
-    "hive-shims")
+
+  /** Extra artifacts not included in Spark SQL's Hive support. */
+  val hiveArtifacts = Seq("hive-cli", "hive-jdbc")
   val hiveDependencies = hiveArtifacts.map ( artifactId =>
-    SHARK_ORGANIZATION % artifactId % HIVE_VERSION excludeAll(
-      excludeGuava, excludeLog4j, excludeServlet, excludeAsm, excludeNetty, excludeXerces)
+    "org.spark-project.hive" % artifactId % "0.12.0" excludeAll(
+      excludeGuava, excludeLog4j, excludeAsm, excludeNetty, excludeXerces, excludeServlet)
   )
-
-  val tachyonDependency = (if (TACHYON_ENABLED) {
-    Some("org.tachyonproject" % "tachyon" % TACHYON_VERSION excludeAll(
-      excludeKyro, excludeHadoop, excludeCurator, excludeJackson, excludeNetty, excludeAsm))
-  } else {
-    None
-  }).toSeq
 
   val yarnDependency = (if (YARN_ENABLED) {
     Some("org.apache.spark" %% "spark-yarn" % SPARK_VERSION)
@@ -112,7 +90,6 @@ object SharkBuild extends Build {
   }).toSeq
 
   def coreSettings = Defaults.defaultSettings ++ DependencyGraphPlugin.graphSettings ++ Seq(
-
     name := "shark",
     organization := SHARK_ORGANIZATION,
     version := SHARK_VERSION,
@@ -122,14 +99,19 @@ object SharkBuild extends Build {
     javacOptions := Seq("-target", JAVAC_JVM_VERSION, "-source", JAVAC_JVM_VERSION),
     parallelExecution in Test := false,
 
+    libraryDependencies ++= hiveDependencies ++ yarnDependency,
+    libraryDependencies ++= Seq(
+      "org.apache.spark" %% "spark-hive" % SPARK_VERSION,
+      "org.apache.spark" %% "spark-repl" % SPARK_VERSION,
+      "com.typesafe" %% "scalalogging-slf4j" % "1.0.1",
+      "org.scalatest"    %% "scalatest"       % "1.9.1"  % "test"
+    ),
+
     // Download managed jars into lib_managed.
     retrieveManaged := true,
     resolvers ++= Seq(
       "Typesafe Repository" at "http://repo.typesafe.com/typesafe/releases/",
       "Cloudera Repository" at "https://repository.cloudera.com/artifactory/cloudera-repos/",
-      "Sonatype Snapshots" at "https://oss.sonatype.org/content/repositories/snapshots/",
-      "Sonatype Staging" at "https://oss.sonatype.org/service/local/staging/deploy/maven2/",
-      "Sonatype Testing" at "https://oss.sonatype.org/content/repositories/eduberkeleycs-1016",
       "Local Maven" at Path.userHome.asFile.toURI.toURL + ".m2/repository"
     ),
  
@@ -140,11 +122,12 @@ object SharkBuild extends Build {
       else
         Some("sonatype-staging"  at nexus + "service/local/staging/deploy/maven2")
     },
+
     publishMavenStyle := true,
     useGpg in Global := true,
     publishArtifact in Test := false,
     pomIncludeRepository := { _ => false },
-    pomExtra := (
+    pomExtra :=
       <url>http://shark.cs.berkeley.edu</url>
       <licenses>
         <license>
@@ -159,6 +142,12 @@ object SharkBuild extends Build {
       </scm>
       <developers>
         <developer>
+          <id>marmbrus</id>
+          <name>Michael Armbrust</name>
+          <email>michael@databricks.com</email>
+          <url>http://www.cs.berkeley.edu/~marmbrus</url>
+        </developer>
+        <developer>
           <id>rxin</id>
           <name>Reynold Xin</name>
           <email>reynoldx@gmail.com</email>
@@ -166,50 +155,9 @@ object SharkBuild extends Build {
           <organization>U.C. Berkeley Computer Science</organization>
           <organizationUrl>http://www.cs.berkeley.edu</organizationUrl>
         </developer>
-      </developers>
-    ),
+      </developers>,
 
-    fork := true,
-    javaOptions += "-XX:MaxPermSize=512m",
-    javaOptions += "-Xmx2g",
-    javaOptions += "-Dsun.io.serialization.extendedDebugInfo=true",
-
-    testOptions in Test += Tests.Argument("-oF"), // Full stack trace on test failures
-
-    testListeners <<= target.map(
-      t => Seq(new eu.henkelmann.sbt.JUnitXmlTestsListener(t.getAbsolutePath))),
-
-    unmanagedSourceDirectories in Compile <+= baseDirectory { base =>
-      if (TACHYON_ENABLED) {
-        base / ("src/tachyon_enabled/scala")
-      } else {
-        base / ("src/tachyon_disabled/scala")
-      }
-    },
-
-    unmanagedJars in Test ++= Seq(
-      file(System.getenv("HIVE_DEV_HOME")) / "build" / "ql" / "test" / "classes"
-    ),
-    libraryDependencies ++= hiveDependencies ++ tachyonDependency ++ yarnDependency,
-    libraryDependencies ++= Seq(
-      "org.apache.spark" %% "spark-core" % SPARK_VERSION,
-      "org.apache.spark" %% "spark-repl" % SPARK_VERSION,
-      "com.google.guava" % "guava" % "14.0.1",
-      "org.apache.hadoop" % "hadoop-client" % hadoopVersion excludeAll(excludeJackson, excludeNetty, excludeAsm) force(),
-      // See https://code.google.com/p/guava-libraries/issues/detail?id=1095
-      "com.google.code.findbugs" % "jsr305" % "1.3.+",
-
-      // Hive unit test requirements. These are used by Hadoop to run the tests, but not necessary
-      // in usual Shark runs.
-      "commons-io" % "commons-io" % "2.1",
-      "commons-httpclient" % "commons-httpclient" % "3.1" % "test",
-
-      // Test infrastructure
-      "org.apache.hadoop" % "hadoop-test" % "0.20.2" % "test" excludeAll(excludeJackson, excludeNetty, excludeAsm) force(),
-      "org.scalatest" %% "scalatest" % "1.9.1" % "test",
-      "junit" % "junit" % "4.10" % "test",
-      "net.java.dev.jets3t" % "jets3t" % "0.7.1",
-      "com.novocode" % "junit-interface" % "0.8" % "test")
+    testOptions in Test += Tests.Argument("-oF") // Full stack trace on test failures
   ) ++ org.scalastyle.sbt.ScalastylePlugin.Settings
 
   def assemblyProjSettings = Seq(
